Bug 1219068 - Compute size correctly when a character consists entirely of glue. r=karlt